# Python-COOxidation

./: .gitignore  COOxidation.ipynb  COOxidation.py  Carbon Monoxide Oxidation on Ru(111).ipynb  conda_environment.yml  main.py  mathematica_generator.py  pyproject.toml  requirements.txt  results.txt  setup.py  state_generator.py  tests.py  tmp.txt
.github/: pull_request_template.md
Program/: co_oxidation_model.py  equation_generator.py  mathematica_generator.py  program_run.py  tmp.py  tmp1.py
Program/Formatters/: equation_formatter.py  formatter_latex.py  formatter_mathematica.py  get_formatter.py
Program/KMC/: COOxidation_KMC.py
TestUnits/: test_co_oxidation_model.py  test_equation_generator.py
coOxidation/: Carbon Monoxide Oxidation on Ru(111).ipynb
coOxidation.egg-info/: PKG-INFO
coOxidation/Program/Analytic/: equation_generator.py
coOxidation/Program/Analytic/Formatters/: formatter_manager.py
coOxidation/Program/Analytic/Formatters/Formatters/: formatter_latex.py  formatter_mathematica.py
coOxidation/Program/Analytic/Interfaces/: formatter.py  generator.py
coOxidation/Program/KMC/: COOxidationAnalysis.py  COOxidation_KMC.py  COOxidation_parameters.py
coOxidation/Program/KMC/RejectionFree/: COOxidattion_KMC_nonrejection.py
coOxidation/Program/TestUnits/Analytic/: test_co_oxidation_model.py  test_equation_generator.py
coOxidation/Program/TestUnits/KMC/: tests_KMC.py
coOxidation/Scripts/: analytic_script.py  calculations.py  kmc_script.py  program_run.py  tests.py
src/Program/KMC/RejectionFree/: COOxidattion_KMC_nonrejection.py
src/co2oxidation/Program/KMC/: COOxidation_KMC.py  COOxidation_parameters.py
src/co2oxidation/program/analytic/: equation_generator.py
src/co2oxidation/program/kmc/: co_oxidation_kmc.py
src/co2oxidation/program/utilities/: context_managers.py
src/co2oxidation/scripts/: analytic_script.py
src/cooxidation/: __main__.py
src/cooxidation/program/analytic/formatters/formatters/: formatter_latex.py
src/cooxidation/program/analytic/iInterfaces/: formatter.py
src/cooxidation/program/kmc/rejection_free/: co_oxidattion_kmc_nonrejection.py
tests/Analytic/: test_analytic.py
tests/KMC/: tests_KMC.py
tests/tests_analytic/: test_analytic.py
tests/tests_kmc/: tests_kmc.py
