# This is the installation script for the package cooxidation. For more
# information on how more parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ------------------------------- Build System ------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ------------------------------ Project Details ----------------------------- #


[project]
name = "cooxidation"
authors = [
    {name = "Andres Garcia Escovar", email = "andrumen1@yahoo.com"},
]
description = "3-site CO oxidation model."
readme = "README.md"
requires-python = ">=3.11.8"
keywords = ["CO", "KMC", "lattice", "three-site", "Stochastic"]
license = {text = "MIT"}
dependencies = [
    "numpy==2.4.2",
    "pyyaml==6.0.1"
]
version = "0.0.1"


# ----------------------------- Package Commands ----------------------------- #


[project.scripts]
cooxidation = "cooxidation.__main__:main"


# ---------------------------- Packages to Include --------------------------- #


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


# -------------------------- Pylint Flags to Include ------------------------- #


[tool.pylint]
disable = []
